wooomp woooomp whaaaaaaa

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 
 		<title>Clicky Click</title>
 	</head>
-	<body onload="initElement();">
+	<body>
 		<div class="noClicky">
-			<span id="move" onmouseover="MoveIt();">
-				<button id="clicky">Click Me</button>
-			</span>
+			<button id="clicky" onmouseover="MoveIt">Click Me</button>
 		</div>
 	</body>
 </html>
